--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,12 +1,3 @@
-.btn{
-    background-color: rgb(18, 65, 136);
-    margin: 3%;
-    font-weight: 600;
-    color:white;
-    width: 45px;
-    
-}
-
 .btnAdd{
-    background-color: rgb(192, 9, 9);
+    background-color:#a58a32;
 }
